src/examples/valid/non-plot/array-cte.ra
func main(): void {
  a = [0, 1, 2];
  print(a[0], a[1], a[2]);
}
