src/examples/invalid/dynamic/div-0.ra
func main(): void {
  a = 1 / 0;
  print(a);
}
